compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type-9.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : real"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..12): "<root>"@(dummy)
      StmtBody@(src/main.t:0..12): []
        StmtItem@(src/main.t:0..12): ItemId(0)
          ConstVar@(src/main.t:0..12): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..12): Real
