compiler/toc-hir-lowering/tests/snapshots/lowering__lower_prim_type.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..11): "<root>"@(dummy)
      StmtBody@(src/main.t:0..11): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
