compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_def-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    procedure empty_params()\n    end empty_params\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..55): "<root>"@(dummy)
      StmtBody@(src/main.t:5..50): []
        StmtItem@(src/main.t:5..50): ItemId(0)
          Subprogram@(src/main.t:5..50): "empty_params"@(src/main.t:15..27) []
            Void@(src/main.t:5..29)
            StmtBody@(src/main.t:34..34): []
