compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_def-8.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: proc end
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..8): "<root>"@(dummy)
      StmtBody@(src/main.t:0..8): []
        StmtItem@(src/main.t:0..8): ItemId(0)
          Subprogram@(src/main.t:0..8): "<unnamed>"@(src/main.t:0..8)
            Void@(src/main.t:0..4)
            StmtBody@(src/main.t:5..5): []
error at src/main.t:5..8: unexpected token
| error for src/main.t:5..8: expected identifier, but found `end`
