compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_def.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    procedure no_params\n    end no_params"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..42): "<root>"@(dummy)
      StmtBody@(src/main.t:5..42): []
        StmtItem@(src/main.t:5..42): ItemId(0)
          Subprogram@(src/main.t:5..42): "no_params"@(src/main.t:15..24)
            Void@(src/main.t:5..24)
            StmtBody@(src/main.t:29..29): []
