compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_tys-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : procedure p1   (a : int)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..33): "<root>"@(dummy)
      StmtBody@(src/main.t:0..33): []
        StmtItem@(src/main.t:0..33): ItemId(0)
          Type@(src/main.t:0..33): "_"@(src/main.t:5..6)
            Procedure@(src/main.t:9..33): [...]
              Primitive@(src/main.t:29..32): Int
              Void@(src/main.t:9..33)
