compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_tys-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type _ : procedure p2   (a : int, b : string)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..45): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..45): []
        StmtItem@(FileId(1), 0..45): ItemId(0)
          Type@(FileId(1), 0..45): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..45): [...]
              Primitive@(FileId(1), 29..32): Int
              Primitive@(FileId(1), 38..44): String
              Void@(FileId(1), 9..45)

