compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_tys-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type _ : procedure pisp (a : int, b : string, c : procedure _ ())"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..65): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..65): []
        StmtItem@(FileId(1), 0..65): ItemId(0)
          Type@(FileId(1), 0..65): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..65): [...]
              Primitive@(FileId(1), 29..32): Int
              Primitive@(FileId(1), 38..44): String
              Procedure@(FileId(1), 50..64): [...]
                Void@(FileId(1), 50..64)
              Void@(FileId(1), 9..65)

