compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_tys-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : procedure"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..18): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          Type@(src/main.t:0..18): "_"@(src/main.t:5..6)
            Procedure@(src/main.t:9..18): [no params]
              Void@(src/main.t:9..18)
